@@ -75,180 +75,180 @@ MoreTraits {
 		AttachmentType = BigWeapon,
 		Tags = ChopTree;CutPlant,
     }
-item Thumper
-{
-MaxRange = 3.0,
-WeaponSprite = Sledgehammer,
-MinAngle = 0.2,
-Type = Weapon,
-MinimumSwingTime = 4,
-EnduranceMod = 3,
-KnockBackOnNoDeath = TRUE,
-SwingAmountBeforeImpact = 0.04,
-Categories = Blunt,
-ConditionLowerChanceOneIn = 100,
-Weight = 10,
-SplatNumber = 10,
-PushBackMod = 8,
-MaxDamage = 30,
-SubCategory = Swinging,
-ConditionMax = 10,
-MaxHitCount = 10,
-DoorDamage = 60,
-IdleAnim = Idle_Weapon2,
-CriticalChance = 20,
-SwingAnim = Sledgehammer,
-WeaponWeight = 10,
-DisplayName = Maul,
-MinRange = 1.2,
-SwingTime = 8,
-DoorHitSound = sledgehammer,
-MinDamage = 10,
-KnockdownMod = 5,
-SplatBloodOnNoDeath = TRUE,
-AlwaysKnockdown = TRUE,
-Tooltip = Tooltip_MoreTraits_Thumper,
-Icon = HammerStone,
-RunAnim = Run_Weapon2,
-TwoHandWeapon = TRUE,
-BreakSound = PZ_WoodSnap,
-TreeDamage = 100,
-MetalValue = 120,
-AttachmentType = BigBlade,
-}
-item ObsidianBlade
-{
-MaxRange = 1.2,
-WeaponSprite = Knife,
-MinAngle = 0,
-Type = Weapon,
-MinimumSwingTime = 1,
-KnockBackOnNoDeath = FALSE,
-SwingAmountBeforeImpact = 0.02,
-Categories = Blade,
-ConditionLowerChanceOneIn = 10,
-Weight = 0.2,
-SplatNumber = 0,
-PushBackMod = 0.3,
-MaxDamage = 10,
-SubCategory = Stab,
-AimingMod = 0.8,
-ConditionMax = 10,
-MaxHitCount = 1,
-IsAimedHandWeapon = TRUE,
-DoorDamage = 1,
-SwingAnim = Stab,
-WeaponWeight = 1.7,
-DisplayName = Obsidian Blade,
-MinRange = 0.61,
-CriticalChance = 50,
-CloseKillMove            = Jaw_Stab,
-SwingTime = 2,
-MinDamage = 3,
-KnockdownMod = 0,
-SplatBloodOnNoDeath = TRUE,
-Tooltip = Tooltip_MoreTraits_ObsidianBlade,
-Icon = HuntingKnife,
-RunAnim = Run_Weapon2,
-IdleAnim = Idle_Weapon2,
-TreeDamage = 2,
-EnduranceMod            = 0.5,
-BreakSound = PZ_MetalSnap,
-MetalValue = 30,
-AttachmentType = Knife,
-Tags = CutPlant,
-}
-item BloodyCrowbar
-{
-MaxRange = 1.2,
-WeaponSprite = Baseballbat,
-MinAngle = 0,
-Type = Weapon,
-MinimumSwingTime = 3,
-KnockBackOnNoDeath = TRUE,
-SwingAmountBeforeImpact = 0.02,
-Categories = Blunt,
-Weight = 5,
-ConditionLowerChanceOneIn = 100,
-PushBackMod = 1.0,
-MinDamage = 1.5,
-MaxDamage = 3.0,
-SubCategory = Swinging,
-ConditionMax = 15,
-MaxHitCount = 1,
-DoorDamage = 80,
-IdleAnim = Idle_Weapon2,
-SwingAnim = Bat,
-CriticalChance = 20,
-WeaponWeight = 4,
-DisplayName = Bloodied Crowbar,
-MinRange = 0.61,
-SwingTime = 1,
-HitAngleMod = -30,
-KnockdownMod = 0,
-Icon = Crowbar,
-RunAnim                = Run_Weapon2,
-BreakSound = PZ_MetalSnap,
-TreeDamage = 100,
-MetalValue = 150,
-Tooltip = Tooltip_MoreTraits_BloodyCrowbar,
-AttachmentType = Hammer,
-Tags = Crowbar;RemoveBarricade,
-}
-item Slugger
-{
-MaxRange = 1.5,
-WeaponSprite = Baseballbat,
-MinAngle = 0.2,
-Type = Weapon,
-MinimumSwingTime = 3,
-KnockBackOnNoDeath = TRUE,
-SwingAmountBeforeImpact = 0.02,
-Categories = Blunt,
-ConditionLowerChanceOneIn = 20,
-Weight = 1,
-SplatNumber = 1,
-PushBackMod = 0.5,
-MaxDamage = 1.2,
-SubCategory = Swinging,
-ConditionMax = 100,
-MaxHitCount = 2,
-DoorDamage = 7,
-IdleAnim = Idle_Weapon2,
-SwingAnim = Bat,
-CriticalChance = 10,
-WeaponWeight = 1,
-DisplayName = Slugger,
-MinRange = 0.61,
-SwingTime = 1,
-HitAngleMod            = -30,
-MinDamage = 0.8,
-KnockdownMod = 2,
-SplatBloodOnNoDeath = FALSE,
-Icon = BaseballBat,
-Tooltip = Tooltip_MoreTraits_Slugger,
-RunAnim = Run_Weapon2,
-TwoHandWeapon = TRUE,
-BreakSound = PZ_WoodSnap,
-TreeDamage = 1,
-AttachmentType = BigBlade,
-}
-item ZombificationCure
-{
-		Weight	=	1.0,
-		Type	=	Food,
-		UnhappyChange	=	-99,
-        StressChange	=	-99,
-        BoredomChange	=	-99,
-        FatigueChange = -99,
-        EnduranceChange = 99,
-		UseWhileEquipped	=	FALSE,
-		DisplayName	=	Zombification Cure,
-		Icon	=	PillsAntidepressant,
-		Tooltip = Tooltip_MoreTraits_Cure,
-		StaticModel = PillBottle,
-		Medical = TRUE,
-}
+    item Thumper
+    {
+            MaxRange = 3.0,
+            WeaponSprite = Sledgehammer,
+            MinAngle = 0.2,
+            Type = Weapon,
+            MinimumSwingTime = 4,
+            EnduranceMod = 3,
+            KnockBackOnNoDeath = TRUE,
+            SwingAmountBeforeImpact = 0.04,
+            Categories = Blunt,
+            ConditionLowerChanceOneIn = 100,
+            Weight = 10,
+            SplatNumber = 10,
+            PushBackMod = 8,
+            MaxDamage = 30,
+            SubCategory = Swinging,
+            ConditionMax = 10,
+            MaxHitCount = 10,
+            DoorDamage = 60,
+            IdleAnim = Idle_Weapon2,
+            CriticalChance = 20,
+            SwingAnim = Sledgehammer,
+            WeaponWeight = 10,
+            DisplayName = Maul,
+            MinRange = 1.2,
+            SwingTime = 8,
+            DoorHitSound = sledgehammer,
+            MinDamage = 10,
+            KnockdownMod = 5,
+            SplatBloodOnNoDeath = TRUE,
+            AlwaysKnockdown = TRUE,
+            Tooltip = Tooltip_MoreTraits_Thumper,
+            Icon = HammerStone,
+            RunAnim = Run_Weapon2,
+            TwoHandWeapon = TRUE,
+            BreakSound = PZ_WoodSnap,
+            TreeDamage = 100,
+            MetalValue = 120,
+            AttachmentType = BigBlade,
+    }
+    item ObsidianBlade
+    {
+            MaxRange = 1.2,
+            WeaponSprite = Knife,
+            MinAngle = 0,
+            Type = Weapon,
+            MinimumSwingTime = 1,
+            KnockBackOnNoDeath = FALSE,
+            SwingAmountBeforeImpact = 0.02,
+            Categories = Blade,
+            ConditionLowerChanceOneIn = 10,
+            Weight = 0.2,
+            SplatNumber = 0,
+            PushBackMod = 0.3,
+            MaxDamage = 10,
+            SubCategory = Stab,
+            AimingMod = 0.8,
+            ConditionMax = 10,
+            MaxHitCount = 1,
+            IsAimedHandWeapon = TRUE,
+            DoorDamage = 1,
+            SwingAnim = Stab,
+            WeaponWeight = 1.7,
+            DisplayName = Obsidian Blade,
+            MinRange = 0.61,
+            CriticalChance = 50,
+            CloseKillMove            = Jaw_Stab,
+            SwingTime = 2,
+            MinDamage = 3,
+            KnockdownMod = 0,
+            SplatBloodOnNoDeath = TRUE,
+            Tooltip = Tooltip_MoreTraits_ObsidianBlade,
+            Icon = HuntingKnife,
+            RunAnim = Run_Weapon2,
+            IdleAnim = Idle_Weapon2,
+            TreeDamage = 2,
+            EnduranceMod            = 0.5,
+            BreakSound = PZ_MetalSnap,
+            MetalValue = 30,
+            AttachmentType = Knife,
+            Tags = CutPlant,
+    }
+    item BloodyCrowbar
+    {
+            MaxRange = 1.2,
+            WeaponSprite = Baseballbat,
+            MinAngle = 0,
+            Type = Weapon,
+            MinimumSwingTime = 3,
+            KnockBackOnNoDeath = TRUE,
+            SwingAmountBeforeImpact = 0.02,
+            Categories = Blunt,
+            Weight = 5,
+            ConditionLowerChanceOneIn = 100,
+            PushBackMod = 1.0,
+            MinDamage = 1.5,
+            MaxDamage = 3.0,
+            SubCategory = Swinging,
+            ConditionMax = 15,
+            MaxHitCount = 1,
+            DoorDamage = 80,
+            IdleAnim = Idle_Weapon2,
+            SwingAnim = Bat,
+            CriticalChance = 20,
+            WeaponWeight = 4,
+            DisplayName = Bloodied Crowbar,
+            MinRange = 0.61,
+            SwingTime = 1,
+            HitAngleMod = -30,
+            KnockdownMod = 0,
+            Icon = Crowbar,
+            RunAnim                = Run_Weapon2,
+            BreakSound = PZ_MetalSnap,
+            TreeDamage = 100,
+            MetalValue = 150,
+            Tooltip = Tooltip_MoreTraits_BloodyCrowbar,
+            AttachmentType = Hammer,
+            Tags = Crowbar;RemoveBarricade,
+    }
+    item Slugger
+    {
+            MaxRange = 1.5,
+            WeaponSprite = Baseballbat,
+            MinAngle = 0.2,
+            Type = Weapon,
+            MinimumSwingTime = 3,
+            KnockBackOnNoDeath = TRUE,
+            SwingAmountBeforeImpact = 0.02,
+            Categories = Blunt,
+            ConditionLowerChanceOneIn = 20,
+            Weight = 1,
+            SplatNumber = 1,
+            PushBackMod = 0.5,
+            MaxDamage = 1.2,
+            SubCategory = Swinging,
+            ConditionMax = 100,
+            MaxHitCount = 2,
+            DoorDamage = 7,
+            IdleAnim = Idle_Weapon2,
+            SwingAnim = Bat,
+            CriticalChance = 10,
+            WeaponWeight = 1,
+            DisplayName = Slugger,
+            MinRange = 0.61,
+            SwingTime = 1,
+            HitAngleMod            = -30,
+            MinDamage = 0.8,
+            KnockdownMod = 2,
+            SplatBloodOnNoDeath = FALSE,
+            Icon = BaseballBat,
+            Tooltip = Tooltip_MoreTraits_Slugger,
+            RunAnim = Run_Weapon2,
+            TwoHandWeapon = TRUE,
+            BreakSound = PZ_WoodSnap,
+            TreeDamage = 1,
+            AttachmentType = BigBlade,
+    }
+    item ZombificationCure
+    {
+            Weight	=	1.0,
+            Type	=	Food,
+            UnhappyChange	=	-99,
+            StressChange	=	-99,
+            BoredomChange	=	-99,
+            FatigueChange = -99,
+            EnduranceChange = 99,
+            UseWhileEquipped	=	FALSE,
+            DisplayName	=	Zombification Cure,
+            Icon	=	PillsAntidepressant,
+            Tooltip = Tooltip_MoreTraits_Cure,
+            StaticModel = PillBottle,
+            Medical = TRUE,
+    }
     item MedicalMag1
     {
         Weight	=	0.1,
@@ -372,7 +372,7 @@ item ZombificationCure
         WeaponLength = 0.4,
         AttachmentType = BigBlade,
     }
-  item ZombPatty
+    item ZombPatty
     {
         HungerChange	=	-15,
         UnhappyChange	=	50,
@@ -416,5 +416,64 @@ item ZombificationCure
         Proteins = 0,
         Lipids = 0,
         Calories = 60,
+	}
+    item AntiqueJacket
+    {
+        DisplayCategory = Clothing,
+        Type = Clothing,
+        DisplayName = Antique Leather Jacket,
+        ClothingItem = JacketLong_Random,
+        BodyLocation = Jacket,
+        IconsForTexture = JacketLongBlack;JacketLongBrown;JacketGreen,
+        BloodLocation = LongJacket,
+        RunSpeedModifier = 1.05,
+        CombatSpeedModifier = 1.10,
+        BiteDefense = 35,
+        ScratchDefense = 65,
+        BulletDefense = 15,
+        NeckProtectionModifier = 1.0,
+        Insulation = 0.75,
+        WindResistance = 0.55,
+        FabricType = Leather,
+        WaterResistance = 0.65,
+        Weight = 3,
+        WorldStaticModel = JacketLong_Ground,
+    }
+    item AntiqueVest
+    {
+        DisplayCategory = Clothing,
+        Type = Clothing,
+        DisplayName = Civilian Bulletproof Vest,
+        ClothingItem = Vest_BulletCivilian,
+        BodyLocation = TorsoExtra,
+        Icon = BulletVestWhite,
+        BloodLocation = ShirtNoSleeves,
+        Insulation = 0.2,
+        WindResistance = 0.15,
+        BiteDefense = 100,
+        ScratchDefense = 100,
+        BulletDefense = 100,
+        WorldStaticModel = BulletVest_Ground,
+    }
+	item AntiqueBoots
+	{
+	    DisplayCategory = Clothing,
+		Type = Clothing,
+		DisplayName = Riding Boots,
+		ClothingItem = Shoes_RidingBoots,
+		BodyLocation = Shoes,
+		BloodLocation = Shoes,
+		Icon = BootsRiding,
+		StompPower = 5.0,
+		ConditionLowerChanceOneIn = 15,
+        ConditionMax = 27,
+        RunSpeedModifier = 1.1,
+        RemoveOnBroken = false,
+        ScratchDefense = 100,
+        BiteDefense = 100,
+        Insulation = 1.0,
+        WindResistance = 0.8,
+        WaterResistance = 0.75,
+        WorldStaticModel = Boots_Ground,
 	}
 }
