@@ -31,3 +31,5 @@ Add checks to prevent Specialization from de-leveling a player (and thus remove 
 Add Cooking level to Gourmand trait.
 Sewer Trait now gives sewing supplies.
 Disable Scrounger, Incomprehensive, and Antique Collector in multiplayer until they can be fixed.
+Adjust Grave Robber rolling algorithm.
+Added some Antique clothing items.
